[package]
name = "nrf_dfu"
version = "0.1.0"
authors = ["Robby Madruga <robbymadruga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.9"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
crc = "1.8.1"