[package]
name = "nrf_dfu"
version = "2.0.1"
authors = ["Robby Madruga <robbymadruga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.9"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_repr = "0.1"
bincode = "1.3.1"
crc = "1.8.1"