[package]
name = "nrf_dfu"
version = "2.0.1"
authors = ["Robby Madruga <robbymadruga@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to help build an nRF updater"
repository = "https://github.com/robbym/nrf_dfu"
keywords = ["nrf", "dfu", "nordic", "updater", "bootloader", "secure"]

[dependencies]
zip = "0.5.9"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_repr = "0.1"
bincode = "1.3.1"
crc = "1.8.1"